--- a/spec/integration/Vagrantfile
+++ b/spec/integration/Vagrantfile
@@ -6,14 +6,29 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.define :trusty do |c|
-    c.vm.box = "ubuntu/trusty64"
+    c.vm.hostname  = 'itamae-trusty'
+    c.vm.hostname += "-#{ENV['WERCKER_BUILD_ID']}" if ENV['WERCKER_BUILD_ID']
+    c.vm.provider :virtualbox do |provider, override|
+      override.vm.box = "ubuntu/trusty64"
+      override.vm.provision :shell, inline: <<-EOC
+  cat /etc/apt/sources.list | sed -e 's|http://[^ ]*|mirror://mirrors.ubuntu.com/mirrors.txt|g' > /tmp/sources.list
+  if !(diff -q /etc/apt/sources.list /tmp/sources.list); then
+    mv /tmp/sources.list /etc/apt/sources.list
+    apt-get update
+  fi
+      EOC
+    end
 
-    c.vm.provision :shell, inline: <<-EOC
-cat /etc/apt/sources.list | sed -e 's|http://[^ ]*|mirror://mirrors.ubuntu.com/mirrors.txt|g' > /tmp/sources.list
-if !(diff -q /etc/apt/sources.list /tmp/sources.list); then
-  mv /tmp/sources.list /etc/apt/sources.list
-  apt-get update
-fi
-    EOC
+    c.vm.provider :digital_ocean do |provider, override|
+      override.ssh.private_key_path = '~/.ssh/id_rsa.vagrant'
+      override.vm.box = 'digital_ocean'
+      override.vm.box_url = "https://github.com/smdahlen/vagrant-digitalocean/raw/master/box/digital_ocean.box"
+
+      provider.ssh_key_name = ENV['WERCKER'] ? 'vagrant/wercker/itamae' : 'Vagrant'
+      provider.token = ENV['DIGITALOCEAN_TOKEN']
+      provider.image = 'Ubuntu 14.04 x64'
+      provider.region = 'nyc2'
+      provider.size = '512mb'
+    end
   end
 end
