Use system libraries for nokogiri gem.

--- a/wercker.yml
+++ b/wercker.yml
@@ -52,8 +52,12 @@ build:
         code: sudo dpkg -i vagrant_1.6.3_x86_64.deb
 
     - script:
+        name: install libxml and libxslt
+        code: sudo apt-get install libxml2-dev libxslt1-dev
+
+    - script:
         name: install vagrant-digitalocean
-        code: vagrant plugin install vagrant-digitalocean
+        code: NOKOGIRI_USE_SYSTEM_LIBRARIES=1 vagrant plugin install vagrant-digitalocean
 
     - script:
         name: start vm
