Revert "Use action_id-isnt-returned branch."
This reverts commit 0e6fd716520c18842d3e348068035b85d7abb82e.

--- a/wercker.yml
+++ b/wercker.yml
@@ -61,7 +61,7 @@ build:
 
     - script:
         name: build vagrant-digitalocean
-        code: "cd vagrant-digitalocean && git checkout action_id-isnt-returned && gem build vagrant-digitalocean.gemspec"
+        code: "cd vagrant-digitalocean && gem build vagrant-digitalocean.gemspec"
 
     - script:
         name: install vagrant-digitalocean
