--- a/spec/integration/Vagrantfile
+++ b/spec/integration/Vagrantfile
@@ -26,7 +26,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
       provider.ssh_key_name = ENV['WERCKER'] ? 'vagrant/wercker/itamae' : 'Vagrant'
       provider.token = ENV['DIGITALOCEAN_TOKEN']
-      provider.image = 'Ubuntu 14.04 x64'
+      provider.image = '14.04 x64' # ubuntu
       provider.region = 'nyc2'
       provider.size = '512mb'
     end
