--- a/spec/integration/Vagrantfile
+++ b/spec/integration/Vagrantfile
@@ -2,11 +2,11 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.define :trusty do |c|
-    c.vm.hostname  = 'itamae-trusty'
+  config.vm.define :xenial do |c|
+    c.vm.hostname  = 'itamae-xenial'
     c.vm.hostname += "-#{ENV['WERCKER_BUILD_ID']}" if ENV['WERCKER_BUILD_ID']
     c.vm.provider :virtualbox do |provider, override|
-      override.vm.box = "ubuntu/trusty64"
+      override.vm.box = "ubuntu/xenial64"
     end
 
     c.vm.provider :digital_ocean do |provider, override|
@@ -16,7 +16,7 @@ Vagrant.configure(2) do |config|
 
       provider.ssh_key_name = ENV['WERCKER'] ? 'vagrant/wercker/itamae' : 'Vagrant'
       provider.token = ENV['DIGITALOCEAN_TOKEN']
-      provider.image = 'ubuntu-14-04-x64' # ubuntu
+      provider.image = 'ubuntu-16-04-x64' # ubuntu
       provider.region = 'nyc3'
       provider.size = '512mb'
     end
