Caching Docker Images on Build
c.f. https://github.com/travis-ci/travis-ci/issues/5358#issuecomment-248915326

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,23 @@ rvm:
   - 2.5
   - ruby-head
 bundler_args: "--jobs=4 --retry=3"
-cache: bundler
+cache:
+  bundler: true
+  directories:
+    - $HOME/docker
+
+before_cache:
+  # Save tagged docker images
+  - >
+    mkdir -p $HOME/docker && docker images -a --filter='dangling=false' --format '{{.Repository}}:{{.Tag}} {{.ID}}'
+    | xargs -n 2 -t sh -c 'test -e $HOME/docker/$1.tar.gz || docker save $0 | gzip -2 > $HOME/docker/$1.tar.gz'
+
 before_install:
   - gem update --system --no-document
   - gem install bundler --no-document
+  # Load cached docker images
+  - if [[ -d $HOME/docker ]]; then ls $HOME/docker/*.tar.gz | xargs -I {file} sh -c "zcat {file} | docker load"; fi
+
 script:
   - bundle exec rake spec
 notifications:
