Run CI with JIT

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,11 @@ notifications:
 matrix:
   allow_failures:
   - rvm: ruby-head
+  include:
+  - rvm: 2.6
+    env: RUBYOPT="--jit"
+  - rvm: ruby-head
+    env: RUBYOPT="--jit"
 branches:
   only:
   - master
