--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ cache:
   bundler: true
 
 before_install:
-  - gem update --system --no-document
-  - gem install bundler --no-document
+  - travis_retry gem update --system || travis_retry gem update --system 2.7.8
+  - travis_retry gem install bundler --no-document || travis_retry gem install bundler --no-document -v 1.17.3
 
 script:
   - bundle exec rake spec
