Enable MJIT on ruby 2.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ matrix:
   include:
   - rvm: 2.6
     env: SPEC_RUBYOPT="--jit"
+  - rvm: 2.7
+    env: SPEC_RUBYOPT="--jit"
   - rvm: ruby-head
     env: SPEC_RUBYOPT="--jit"
 branches:
