--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
         rubyopt:
           - ""
           - "--jit"
+          - "--yjit"
         exclude:
           # --jit is available since MRI 2.6
           - ruby:    "2.3"
@@ -39,7 +40,19 @@ jobs:
             rubyopt: "--jit"
           - ruby:    "2.5"
             rubyopt: "--jit"
-
+          # --yjit is available since MRI 3.1
+          - ruby:    "2.3"
+            rubyopt: "--yjit"
+          - ruby:    "2.4"
+            rubyopt: "--yjit"
+          - ruby:    "2.5"
+            rubyopt: "--yjit"
+          - ruby:    "2.6"
+            rubyopt: "--yjit"
+          - ruby:    "2.7"
+            rubyopt: "--yjit"
+          - ruby:    "3.0"
+            rubyopt: "--yjit"
     env:
       RUBYOPT: ${{ matrix.rubyopt }}
 
