Stop testing with ruby:2.3 + integration-local

--- a/.github/workflows/test_main.yml
+++ b/.github/workflows/test_main.yml
@@ -91,6 +91,9 @@ jobs:
   integration-local:
     runs-on: ubuntu-latest
 
+    # NOTE: Use debian buster+
+    if: ${{ inputs.ruby >= '2.4' }}
+
     steps:
       - uses: actions/checkout@v3
 
