Fixed. Couldn't install bundler with Ruby 2.7 + --jit
https://github.com/itamae-kitchen/itamae/actions/runs/4859326753/jobs/8661815192

--- a/.github/workflows/test_main.yml
+++ b/.github/workflows/test_main.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           ruby-version: ${{ inputs.ruby }}
           bundler-cache: true
+          bundler: default
 
       - run: bundle update
 
@@ -64,6 +65,7 @@ jobs:
         with:
           ruby-version: ${{ inputs.ruby }}
           bundler-cache: true
+          bundler: default
 
       - run: bundle update
 
@@ -101,6 +103,7 @@ jobs:
         with:
           ruby-version: ${{ inputs.ruby }}
           bundler-cache: true
+          bundler: default
 
       - run: bundle update
 
