--- a/.github/workflows/test_main.yml
+++ b/.github/workflows/test_main.yml
@@ -93,7 +93,7 @@ jobs:
   integration-local:
     runs-on: ubuntu-latest
 
-    # NOTE: Use debian buster+
+    # NOTE: When ruby is 2.3, tests run on stretch. But stretch is already EOL and didn't work apt-get
     if: ${{ inputs.ruby >= '2.4' }}
 
     steps:
