--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,10 +27,12 @@ jobs:
           - "3.0"
           - "3.1"
           - "3.2"
+          - "3.3"
         rubyopt:
           - ""
           - "--jit"
           - "--yjit"
+          - "--rjit"
         exclude:
           # --jit is available since MRI 2.6
           - ruby:    "2.3"
@@ -52,6 +54,23 @@ jobs:
             rubyopt: "--yjit"
           - ruby:    "3.0"
             rubyopt: "--yjit"
+          # --rjit is available since MRI 3.3
+          - ruby:    "2.3"
+            rubyopt: "--rjit"
+          - ruby:    "2.4"
+            rubyopt: "--rjit"
+          - ruby:    "2.5"
+            rubyopt: "--rjit"
+          - ruby:    "2.6"
+            rubyopt: "--rjit"
+          - ruby:    "2.7"
+            rubyopt: "--rjit"
+          - ruby:    "3.0"
+            rubyopt: "--rjit"
+          - ruby:    "3.1"
+            rubyopt: "--rjit"
+          - ruby:    "3.2"
+            rubyopt: "--rjit"
 
     uses: ./.github/workflows/test_main.yml
     with:
