Add xenial to docker integration test matrix

--- a/.github/workflows/test_main.yml
+++ b/.github/workflows/test_main.yml
@@ -53,6 +53,7 @@ jobs:
       matrix:
         image:
           - ubuntu:trusty
+          - ubuntu:xenial
 
     env:
       TEST_IMAGE: ${{ matrix.image }}
