--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,7 @@ jobs:
           - "3.1"
           - "3.2"
           - "3.3"
+          - "3.4"
         rubyopt:
           - ""
           - "--jit"
@@ -58,6 +59,8 @@ jobs:
           - ruby:    "3.2"
             rubyopt: "--yjit"
           - ruby:    "3.3"
+            rubyopt: "--yjit"
+          - ruby:    "3.4"
             rubyopt: "--yjit"
 
     uses: ./.github/workflows/test_main.yml
