Ignore integration-local when ruby < Ruby 2.6
I think ruby:2.5 uses debian:buster, but buster is already EOL...

https://github.com/itamae-kitchen/itamae/actions/runs/16979568870/job/48136506795

```
Your RubyGems version (2.6.14.4) has a bug that prevents `required_ruby_version` from working for Bundler. Any scripts that use `gem install bundler` will break as soon as Bundler drops support for your Ruby version. Please upgrade RubyGems to avoid future breakage and silence this warning by running `gem update --system 3.2.3`
docker run --privileged -d --name itamae -v /home/runner/work/itamae/itamae:/itamae ruby:2.4 sleep 1d
Unable to find image 'ruby:2.4' locally
2.4: Pulling from library/ruby
f15005b0235f: Pulling fs layer

docker exec --env LANG=en_US.utf8 itamae apt-get update -y
Ign:1 http://security.debian.org/debian-security buster/updates InRelease
Err:2 http://security.debian.org/debian-security buster/updates Release
  404  Not Found [IP: 151.101.202.132 80]
Ign:3 http://deb.debian.org/debian buster InRelease
Ign:4 http://deb.debian.org/debian buster-updates InRelease
Err:5 http://deb.debian.org/debian buster Release
  404  Not Found [IP: 151.101.202.132 80]
Err:6 http://deb.debian.org/debian buster-updates Release
  404  Not Found [IP: 151.101.202.132 80]
Reading package lists...
E: The repository 'http://security.debian.org/debian-security buster/updates Release' does not have a Release file.
E: The repository 'http://deb.debian.org/debian buster Release' does not have a Release file.
E: The repository 'http://deb.debian.org/debian buster-updates Release' does not have a Release file.
rake aborted!
```

--- a/.github/workflows/test_main.yml
+++ b/.github/workflows/test_main.yml
@@ -101,8 +101,8 @@ jobs:
   integration-local:
     runs-on: ubuntu-latest
 
-    # NOTE: When ruby is 2.3, tests run on stretch. But stretch is already EOL and didn't work apt-get
-    if: ${{ inputs.ruby >= '2.4' }}
+    # NOTE: When ruby is 2.5, tests run on buster. But buster is already EOL and didn't work apt-get
+    if: ${{ inputs.ruby >= '2.6' }}
 
     steps:
       - uses: actions/checkout@v4
