[WIP] Ignore failure notify

--- a/.github/workflows/test_main.yml
+++ b/.github/workflows/test_main.yml
@@ -33,16 +33,17 @@ jobs:
         env:
           RUBYOPT: ${{ inputs.rubyopt }}
 
-      - name: Slack Notification (not success)
-        uses: lazy-actions/slatify@master
-        if: "! success()"
-        continue-on-error: true
-        with:
-          job_name: ${{ format('*unit* ({0},{1})', inputs.ruby, inputs.rubyopt) }}
-          type: ${{ job.status }}
-          icon_emoji: ":octocat:"
-          url: ${{ secrets.SLACK_WEBHOOK }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+      # TODO: for develop
+      # - name: Slack Notification (not success)
+      #   uses: lazy-actions/slatify@master
+      #   if: "! success()"
+      #   continue-on-error: true
+      #   with:
+      #     job_name: ${{ format('*unit* ({0},{1})', inputs.ruby, inputs.rubyopt) }}
+      #     type: ${{ job.status }}
+      #     icon_emoji: ":octocat:"
+      #     url: ${{ secrets.SLACK_WEBHOOK }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
 
   integration-docker:
     runs-on: ubuntu-latest
@@ -87,16 +88,17 @@ jobs:
         env:
           RUBYOPT: ${{ inputs.rubyopt }}
 
-      - name: Slack Notification (not success)
-        uses: lazy-actions/slatify@master
-        if: "! success()"
-        continue-on-error: true
-        with:
-          job_name: ${{ format('*integration-docker* ({0},{1},{2})', inputs.ruby, inputs.rubyopt, matrix.image) }}
-          type: ${{ job.status }}
-          icon_emoji: ":octocat:"
-          url: ${{ secrets.SLACK_WEBHOOK }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+      # TODO: for develop
+      # - name: Slack Notification (not success)
+      #   uses: lazy-actions/slatify@master
+      #   if: "! success()"
+      #   continue-on-error: true
+      #   with:
+      #     job_name: ${{ format('*integration-docker* ({0},{1},{2})', inputs.ruby, inputs.rubyopt, matrix.image) }}
+      #     type: ${{ job.status }}
+      #     icon_emoji: ":octocat:"
+      #     url: ${{ secrets.SLACK_WEBHOOK }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
 
   integration-local:
     runs-on: ubuntu-latest
@@ -123,13 +125,14 @@ jobs:
         env:
           RUBYOPT: ${{ inputs.rubyopt }}
 
-      - name: Slack Notification (not success)
-        uses: lazy-actions/slatify@master
-        if: "! success()"
-        continue-on-error: true
-        with:
-          job_name: ${{ format('*integration-local* ({0},{1})', inputs.ruby, inputs.rubyopt) }}
-          type: ${{ job.status }}
-          icon_emoji: ":octocat:"
-          url: ${{ secrets.SLACK_WEBHOOK }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+      # TODO: for develop
+      # - name: Slack Notification (not success)
+      #   uses: lazy-actions/slatify@master
+      #   if: "! success()"
+      #   continue-on-error: true
+      #   with:
+      #     job_name: ${{ format('*integration-local* ({0},{1})', inputs.ruby, inputs.rubyopt) }}
+      #     type: ${{ job.status }}
+      #     icon_emoji: ":octocat:"
+      #     url: ${{ secrets.SLACK_WEBHOOK }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
