Run http_request test only 1 build in each pipeline
This repository uses matrix to run 50+ builds in a pipeline.
This results in simultaneous requests being sent to httpbin.org,
similar to a DDoS attack, often causing 500 errors and test failures.

e.g. https://github.com/itamae-kitchen/itamae/actions/runs/17045210601/job/48319099479?pr=379

Therefore, I suppressed simultaneous requests to httpbin.org.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,6 +67,15 @@ jobs:
     with:
       ruby: ${{ matrix.ruby }}
       rubyopt: ${{ matrix.rubyopt }}
+
+      # This repository uses matrix to run 50+ builds in a pipeline.
+      # This results in simultaneous requests being sent to httpbin.org,
+      # similar to a DDoS attack, often causing 500 errors and test failures.
+      #
+      # e.g. https://github.com/itamae-kitchen/itamae/actions/runs/17045210601/job/48319099479?pr=379
+      #
+      # Therefore, I suppressed simultaneous requests to httpbin.org.
+      skip_http_request_test: ${{ (matrix.ruby == '2.3' && matrix.rubyopt == '') && 'false' || 'true' }}
     secrets:
       SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
 
